tweaks to pagination
